[workspace]
members = ["general/echo/kmdf/driver/*", "general/echo/kmdf/exe", "tools/dv/samples/kmdf/pool_leak"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/microsoft/windows-rust-driver-samples"
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[workspace.dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-build = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
