[workspace]
members = [
  "general/echo/kmdf/driver/*",
  "general/echo/kmdf/exe",
  "tools/dv/kmdf/fail_driver_pool_leak",
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/microsoft/windows-rust-driver-samples"
license = "MIT OR Apache-2.0"

[workspace.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[workspace.dependencies]
anyhow = "1.0.89"
paste = "1.0.14"
wdk = "0.3.1"
wdk-alloc = "0.3.1"
wdk-build = "0.4.0"
wdk-panic = "0.3.1"
wdk-sys = "0.4.0"
