[workspace]
members = [
  "general/echo/kmdf/driver/*",
  "general/echo/kmdf/exe",
  "tools/dv/kmdf/fail_driver_pool_leak",
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/microsoft/windows-rust-driver-samples"
license = "MIT OR Apache-2.0"

[workspace.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[workspace.dependencies]
anyhow = "1.0.89"
paste = "1.0.14"
wdk = "0.4.0"
wdk-alloc = "0.4.0"
wdk-build = "0.5.0"
wdk-panic = "0.4.0"
wdk-sys = "0.5.0"

[patch.crates-io]
wdk = { git = "https://github.com/microsoft/windows-drivers-rs.git" , branch = "release-plz-2025-11-06T01-55-28Z" }
wdk-alloc = { git = "https://github.com/microsoft/windows-drivers-rs.git" , branch = "release-plz-2025-11-06T01-55-28Z" }
wdk-build = { git = "https://github.com/microsoft/windows-drivers-rs.git" , branch = "release-plz-2025-11-06T01-55-28Z" }
wdk-panic = { git = "https://github.com/microsoft/windows-drivers-rs.git" , branch = "release-plz-2025-11-06T01-55-28Z" }
wdk-sys = { git = "https://github.com/microsoft/windows-drivers-rs.git" , branch = "release-plz-2025-11-06T01-55-28Z" }
