[package]
name = "pool_leak"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.wdk]

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk.workspace = true
wdk-alloc.workspace = true
wdk-panic.workspace = true
wdk-sys.workspace = true
paste = "1.0.14"

[build-dependencies]
wdk-build.workspace = true

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]